# label-01071-20260408

./: .gitignore  README.md  run.bat  run.ps1  run.sh
docs/: project_design.md
screenshot-tool/: CMakeLists.txt
screenshot-tool/resources/: resources.qrc
screenshot-tool/src/: Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  ScreenCapture.cpp  ScreenCapture.h  SelectionOverlay.cpp  SelectionOverlay.h  StartWindow.cpp  StartWindow.h  StyleManager.cpp  StyleManager.h  ToolBar.cpp  ToolBar.h  main.cpp
screenshot-tool/tests/: CMakeLists.txt  test_logger.cpp  test_screen_capture.cpp  test_selection_overlay.cpp  test_style_manager.cpp
